[package]
name = "participate-rpc"
version = "2.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.jsonrpc-core]
version = "14.0.3"

[dependencies.jsonrpc-core-client]
version = "14.0.3"

[dependencies.jsonrpc-derive]
version = "14.0.3"

[dependencies.serde]
version = "1.0.101"
features = ["derive"]
optional = true

[dependencies.sp-rpc]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-blockchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc6'
version = '2.0.0-rc6'

[dependencies.participate-runtime-api]
default-features = false
package = 'participate-runtime-api'
path = '../runtime-api'
version = '2.0.0-rc6'

[features]
default = ["std"]
std = [
  "serde",
  "sp-runtime/std",
  "sp-api/std",
  "participate-runtime-api/std",
  'sp-std/std'
]
